--- a/index.html
+++ b/index.html
@@ -144,37 +144,37 @@
 				<tr>
 					<td align=center width=100px>
 						<center>
-							<span style="font-size:24px"><a href="https://en.wikipedia.org/wiki/James_J._Gibson">Xuelian Cheng</a></span>
+							<span style="font-size:24px"><a href="https://scholar.google.com/citations?user=gQ5kHH8AAAAJ&hl=en">Xuelian Cheng</a></span>
 						</center>
 					</td>
 					<td align=center width=100px>
 						<center>
-							<span style="font-size:24px"><a href="https://en.wikipedia.org/wiki/James_J._Gibson">Huan Xiong</a></span>
+							<span style="font-size:24px"><a href="https://scholar.google.com/citations?user=l4hm14MAAAAJ&hl=en">Huan Xiong</a></span>
 						</center>
 					</td>
 					<td align=center width=100px>
 						<center>
-							<span style="font-size:24px"><a href="https://en.wikipedia.org/wiki/James_J._Gibson">Deng-ping Fan</a></span>
+							<span style="font-size:24px"><a href="https://dengpingfan.github.io/">Deng-ping Fan</a></span>
 						</center>
 					</td>
 					<td align=center width=100px>
 						<center>
-							<span style="font-size:24px"><a href="https://en.wikipedia.org/wiki/James_J._Gibson">Yiran Zhong</a></span>
+							<span style="font-size:24px"><a href="https://scholar.google.com.sg/citations?user=E9NVOBUAAAAJ&hl=en">Yiran Zhong</a></span>
 						</center>
 					</td>
 					<td align=center width=100px>
 						<center>
-							<span style="font-size:24px"><a href="https://en.wikipedia.org/wiki/James_J._Gibson">Mehrtash Harandi</a></span>
+							<span style="font-size:24px"><a href="https://sites.google.com/site/mehrtashharandi/">Mehrtash Harandi</a></span>
 						</center>
 					</td>
 					<td align=center width=100px>
 						<center>
-							<span style="font-size:24px"><a href="https://en.wikipedia.org/wiki/James_J._Gibson">Tom Drummond</a></span>
+							<span style="font-size:24px"><a href="http://twd20g.blogspot.com/">Tom Drummond</a></span>
 						</center>
 					</td>
 					<td align=center width=100px>
 						<center>
-							<span style="font-size:24px"><a href="https://en.wikipedia.org/wiki/James_J._Gibson">Zongyuan Ge</a></span>
+							<span style="font-size:24px"><a href="https://zongyuange.github.io/">Zongyuan Ge</a></span>
 						</center>
 					</td>
 				</tr>
@@ -201,7 +201,7 @@
 			<tr>
 				<td width=260px>
 					<center>
-						<img class="round" style="width:500px" src="./resources/teaser.png"/>
+						<img class="round" style="width:500px" src="./images/overall_pipeline.pdf"/>
 					</center>
 				</td>
 			</tr>
