--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
 	<br>
 	<center>
 		<span style="font-size:36px">Implicit Motion Handling for Video Camouflaged Object Detection</span>
-		<table align=center width=600px>
-			<table align=center width=600px>
+		<table align=center width=800px>
+			<table align=center width=800px>
 				<tr>
 					<td align=center width=100px>
 						<center>
@@ -221,7 +221,17 @@
 		<center><h1>Abstract</h1></center>
 		<tr>
 			<td>
-				This is my abstract.
+				We propose a new video camouflaged object detection (VCOD) framework that can exploit both short-term dynamics and long-term temporal consistency to detect camouflaged 
+				objects from video frames. An essential property of camouflaged objects is that they usually exhibit patterns 
+				similar to the background and thus make them hard to identify from still images. Therefore, effectively handling
+				temporal dynamics in videos becomes the key for the VCOD task as the camouflaged objects will be noticeable 
+				when they move. However, current VCOD methods often leverage homography or optical flows to represent 
+				motions, where the detection error may accumulate from both the motion estimation error and the segmentation error.
+				On the other hand, our method unifies motion estimation and object segmentation within a single optimization 
+				framework. Specifically, we build a dense correlation volume to implicitly capture motions between neighbouring 
+				frames and utilize the final segmentation supervision to optimize the implicit motion estimation and segmentation 
+				jointly. Furthermore, to enforce temporal consistency within a video sequence, we jointly utilize a spatio-temporal 
+				transformer to refine the short-term predictions. Extensive experiments on VCOD benchmarks demonstrate the architectural effectiveness of our approach.
 			</td>
 		</tr>
 	</table>
@@ -258,7 +268,7 @@
 		<tr>
 			<td align=center width=400px>
 				<center>
-					<td><img class="round" style="width:450px" src="./resources/method_diagram.png"/></td>
+					<td><img class="round" style="width:450px" src="./images/short_term_details.pdf"/></td>
 				</center>
 			</td>
 		</tr>
