--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 		<table align=center width=850px>
 			<tr>
 				<td>
-					
+				The overall pipeline of the SLT-Net. The SLT-Net consists of a short-term detection module and a long-term refinement module. The short-term detection module takes a pair of consecutive frames and predicts the camouflaged object mask for the reference frame. The long-term refinement module takes T predictions from the short-term detection module along with their corresponding referenced frames to generate the final predictions.	
 				</td>
 			</tr>
 		</table>
