--- a/index.html
+++ b/index.html
@@ -144,37 +144,37 @@
 				<tr>
 					<td align=center width=100px>
 						<center>
-							<span style="font-size:24px"><a href="https://scholar.google.com/citations?user=gQ5kHH8AAAAJ&hl=en">Xuelian Cheng</a></span>
+							<span style="font-size:18px"><a href="https://scholar.google.com/citations?user=gQ5kHH8AAAAJ&hl=en">Xuelian Cheng</a></span>
 						</center>
 					</td>
 					<td align=center width=100px>
 						<center>
-							<span style="font-size:24px"><a href="https://scholar.google.com/citations?user=l4hm14MAAAAJ&hl=en">Huan Xiong</a></span>
+							<span style="font-size:18px"><a href="https://scholar.google.com/citations?user=l4hm14MAAAAJ&hl=en">Huan Xiong</a></span>
 						</center>
 					</td>
 					<td align=center width=100px>
 						<center>
-							<span style="font-size:24px"><a href="https://dengpingfan.github.io/">Deng-ping Fan</a></span>
+							<span style="font-size:18px"><a href="https://dengpingfan.github.io/">Deng-ping Fan</a></span>
 						</center>
 					</td>
 					<td align=center width=100px>
 						<center>
-							<span style="font-size:24px"><a href="https://scholar.google.com.sg/citations?user=E9NVOBUAAAAJ&hl=en">Yiran Zhong</a></span>
+							<span style="font-size:18px"><a href="https://scholar.google.com.sg/citations?user=E9NVOBUAAAAJ&hl=en">Yiran Zhong</a></span>
 						</center>
 					</td>
 					<td align=center width=100px>
 						<center>
-							<span style="font-size:24px"><a href="https://sites.google.com/site/mehrtashharandi/">Mehrtash Harandi</a></span>
+							<span style="font-size:18px"><a href="https://sites.google.com/site/mehrtashharandi/">Mehrtash Harandi</a></span>
 						</center>
 					</td>
 					<td align=center width=100px>
 						<center>
-							<span style="font-size:24px"><a href="http://twd20g.blogspot.com/">Tom Drummond</a></span>
+							<span style="font-size:18px"><a href="http://twd20g.blogspot.com/">Tom Drummond</a></span>
 						</center>
 					</td>
 					<td align=center width=100px>
 						<center>
-							<span style="font-size:24px"><a href="https://zongyuange.github.io/">Zongyuan Ge</a></span>
+							<span style="font-size:18px"><a href="https://zongyuange.github.io/">Zongyuan Ge</a></span>
 						</center>
 					</td>
 				</tr>
@@ -211,7 +211,7 @@
 			<tr>
 				<td width=260px>
 					<center>
-						<img class="round" style="width:500px" src="./images/overall_pipeline.pdf"/>
+						<img class="round" style="width:500px" src="./images/overall.png"/>
 					</center>
 				</td>
 			</tr>
@@ -278,7 +278,7 @@
 		<tr>
 			<td align=center width=400px>
 				<center>
-					<td><img class="round" style="width:450px" src="./images/short_term_details.pdf"/></td>
+					<td><img class="round" style="width:450px" src="./images/short_term.png"/></td>
 				</center>
 			</td>
 		</tr>
@@ -287,17 +287,12 @@
 		<center>
 			<tr>
 				<td>
-					Short description if wanted
+				The overview of our short-term pipeline. The network first extracts features from the input frames by a transformer encoder,
+				then computes a full-range volumetric correspondence between the reference frame It and its neighboring frame It+1 to form a correlation
+				volume pyramid. A CNN decoder is used to predict the final prediction from the motions captured by the short-term correlation pyramid.
 				</td>
 			</tr>
 		</center>
-	</table>
-	<table align=center width=800px>
-		<br>
-		<tr><center>
-			<span style="font-size:28px">&nbsp;<a href='https://github.com/XuelianCheng/SLT-Net'>[GitHub]</a>
-			</center>
-		</span>
 	</table>
 	<br>
 	<hr>
