--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 			<td><a href=""><img class="layered-paper-big" style="height:175px" src="./resources/paper.png"/></a></td>
 			<td><span style="font-size:14pt">F. Author, S. Author, T. Author.<br>
 				<b>Implicit Motion Handling for Video Camouflaged Object Detection</b><br>
-				In Conference, 20XX.<br>
+				In CVPR, 2022.<br>
 				(hosted on <a href="">ArXiv</a>)<br>
 				<!-- (<a href="./resources/camera-ready.pdf">camera ready</a>)<br> -->
 				<span style="font-size:4pt"><a href=""><br></a>
