--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 					</td>
 				</tr>
 			</table>
-			<table align=center width=500px>
+			<table align=center width=800>
 				<tr>
 					<td align=center width=120px>
 						<center>
