--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 			<td><span style="font-size:14pt">Xuelian Cheng, Huan Xiong, Deng-ping Fan, Yiran Zhong, Mehrtash Harandi, Tom Drummond, Zongyuan Ge<br>
 				<b>Implicit Motion Handling for Video Camouflaged Object Detection</b><br>
 				In CVPR, 2022.<br>
-				(hosted on <a href="">ArXiv</a>)<br>
+				(hosted on <a href="http://arxiv.org/abs/2203.07363">ArXiv</a>)<br>
 				<!-- (<a href="./resources/camera-ready.pdf">camera ready</a>)<br> -->
 				<span style="font-size:4pt"><a href=""><br></a>
 				</span>
