--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 					</td>
 					<td align=center width=120px>
 						<center>
-							<span style="font-size:18px"><a href="https://dengpingfan.github.io/">Deng-ping Fan</a></span>
+							<span style="font-size:18px"><a href="https://dengpingfan.github.io/">Deng-Ping Fan</a></span>
 						</center>
 					</td>
 					<td align=center width=100px>
@@ -304,6 +304,7 @@
 			<td><span style="font-size:14pt">Xuelian Cheng, Huan Xiong, Deng-ping Fan, Yiran Zhong, Mehrtash Harandi, Tom Drummond, Zongyuan Ge<br>
 				<b>Implicit Motion Handling for Video Camouflaged Object Detection</b><br>
 				In CVPR, 2022.<br>
+				(hosted on <a href="http://arxiv.org/abs/2203.07363">ArXiv</a>)<br>
 				(hosted on <a href="http://arxiv.org/abs/2203.07363">ArXiv</a>)<br>
 				<!-- (<a href="./resources/camera-ready.pdf">camera ready</a>)<br> -->
 				<span style="font-size:4pt"><a href=""><br></a>
