--- a/index.html
+++ b/index.html
@@ -301,10 +301,9 @@
 		<center><h1>Paper and Supplementary Material</h1></center>
 		<tr>
 			<td><a href=""><img class="layered-paper-big" style="height:175px" src="./resources/paper.png"/></a></td>
-			<td><span style="font-size:14pt">Xuelian Cheng, Huan Xiong, Deng-ping Fan, Yiran Zhong, Mehrtash Harandi, Tom Drummond, Zongyuan Ge<br>
+			<td><span style="font-size:14pt">Xuelian Cheng, Huan Xiong, Deng-Ping Fan, Yiran Zhong, Mehrtash Harandi, Tom Drummond, Zongyuan Ge<br>
 				<b>Implicit Motion Handling for Video Camouflaged Object Detection</b><br>
 				In CVPR, 2022.<br>
-				(hosted on <a href="http://arxiv.org/abs/2203.07363">ArXiv</a>)<br>
 				(hosted on <a href="http://arxiv.org/abs/2203.07363">ArXiv</a>)<br>
 				<!-- (<a href="./resources/camera-ready.pdf">camera ready</a>)<br> -->
 				<span style="font-size:4pt"><a href=""><br></a>
