--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 				<tr>
 					<td align=center width=120px>
 						<center>
-							<span style="font-size:20px"><a href=''>[Paper]</a></span>
+							<span style="font-size:20px"><a href='https://arxiv.org/abs/2203.07363'>[Paper]</a></span>
 						</center>
 					</td>
 					<td align=center width=120px>
