--- a/index.html
+++ b/index.html
@@ -345,6 +345,8 @@
             <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=05295b&w=600&t=tt&d=_esFV6rZeLCKIhjcLTrO95tdL3k8dEc2lQWgOc9jHOc&co=f8f9fa&ct=05295b'></script>
         </div>
     </section>
+	
+	[![visits](https://github-visit-counter.herokuapp.com/{username}/{repo}/visits.svg)](#)
 
 <br>
 </body>
