--- a/index.html
+++ b/index.html
@@ -342,12 +342,9 @@
                 <!--<h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>-->
         </div>
         <div class="container">
-            <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=05295b&w=600&t=tt&d=_esFV6rZeLCKIhjcLTrO95tdL3k8dEc2lQWgOc9jHOc&co=f8f9fa&ct=05295b'></script>
+            <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=uImnlGQbvLcGtZlwHXUkdnb_6p8QDj4V_CPra0MAdRM"></script>
         </div>
     </section>
-	
-	[![visits](https://github-visit-counter.herokuapp.com/{username}/{repo}/visits.svg)](#)
-
 <br>
 </body>
 </html>
