--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 	</table>
 	
 	<!-- Visitor -->
-    <section class="page-section" id="visitor" align=center>
+    <section class="page-section" id="visitor" align=center width=450px>
         <div class="text-center">
             <h2 class="section-heading text-uppercase">Visitors</h2>
                 <!--<h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>-->
