--- a/index.html
+++ b/index.html
@@ -340,8 +340,8 @@
 		<div class="text-center">
 			<h2 class="section-heading text-uppercase">Visitors</h2>
 		</div>
-		<div class="container">
-			<script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=uImnlGQbvLcGtZlwHXUkdnb_6p8QDj4V_CPra0MAdRM" width=450px></script>
+		<div class="container" width=450px>
+			<script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=uImnlGQbvLcGtZlwHXUkdnb_6p8QDj4V_CPra0MAdRM"></script>
 		</div>
 	</section>
 <br>
