--- a/index.html
+++ b/index.html
@@ -335,15 +335,19 @@
 		</tr>
 	</table>
 	
-	<hr>
-	<section class="page-section" id="visitor" align=center width=400px>
-		<div class="text-center">
-			<h2 class="section-heading text-uppercase">Visitors</h2>
-		</div>
-		<div class="container" width=200px>
+	<hr>	
+	<br>
+	<table align=center width=400>
+		<tr>
+			<td width=200>
+				<left>
+					<center><h1>Visitors</h1></center>
 			<script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=uImnlGQbvLcGtZlwHXUkdnb_6p8QDj4V_CPra0MAdRM"></script>
-		</div>
-	</section>
+				</left>
+			</td>
+		</tr>
+	</table>
+
 <br>
 </body>
 </html>
