--- a/index.html
+++ b/index.html
@@ -339,11 +339,8 @@
 	<br>
 	<table align=center width=400>
 		<tr>
-			<td width=200>
-				<left>
-					<center><h1>Visitors</h1></center>
-					<script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=uImnlGQbvLcGtZlwHXUkdnb_6p8QDj4V_CPra0MAdRM"></script>
-				</left>
+			<td width=200><center><h1>Visitors</h1></center>
+				<script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=uImnlGQbvLcGtZlwHXUkdnb_6p8QDj4V_CPra0MAdRM"></script>
 			</td>
 		</tr>
 	</table>
