--- a/index.html
+++ b/index.html
@@ -294,9 +294,31 @@
 		</table>
 	</center>
 
-
 	<br>
 	<hr>
+
+	<center><h1>MoCA-Mask Dataset</h1></center>
+	<center>
+		<table align=center width=850px>
+			<tr>
+				<td width=260px>
+					<center>
+						<img class="round" style="width:600px" src="./images/samples.png"/>
+					</center>
+				</td>
+			</tr>
+		</table>
+		<table align=center width=850px>
+			<tr>
+				<td>
+					Representative samples from MoCA-Mask. The dataset is quite challenging including diverse scenes, suash as various lighting conditions, 
+					i.e, dark and sunny, complex background, camera motions, small ratio of animals and tiny body structures, such as slim torso /limbs.
+				</td>
+			</tr>
+		</table>
+	</center>
+	<br>
+
 	<table align=center width=450px>
 		<center><h1>Paper and Supplementary Material</h1></center>
 		<tr>
