--- a/index.html
+++ b/index.html
@@ -296,8 +296,28 @@
 
 	<br>
 	<hr>
-
 	<center><h1>MoCA-Mask Dataset</h1></center>
+	<center>
+		<table align=center width=850px>
+			<tr>
+				<td width=260px>
+					<center>
+						<img class="round" style="width:600px" src="./images/summ.png"/>
+					</center>
+				</td>
+			</tr>
+		</table>
+		<table align=center width=850px>
+			<tr>
+				<td>
+					Summary for training and test set distribution. Our MoCA-Mask dataset includes 87 video sequences in total, 
+					in which 16 sequences were tagged as ''unknow'' (colored in orange). 
+					This split is used to validate the sensitivity of different models on novel samples. Zoom-in for details.
+				</td>
+			</tr>
+		</table>
+	</center>
+
 	<center>
 		<table align=center width=850px>
 			<tr>
@@ -317,6 +337,26 @@
 			</tr>
 		</table>
 	</center>
+
+	<center>
+		<table align=center width=850px>
+			<tr>
+				<td width=260px>
+					<center>
+						<img class="round" style="width:600px" src="./images/supp.png"/>
+					</center>
+				</td>
+			</tr>
+		</table>
+		<table align=center width=850px>
+			<tr>
+				<td>
+				Comparison of our proposed network with two top-performing baselines on MoCA-Mask test dataset.
+				</td>
+			</tr>
+		</table>
+	</center>
+
 	<br>
 
 	<table align=center width=450px>
