--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 		<tr>
 			<td width=200><center><h1>Visitors</h1></center>
 				<!-- <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=uImnlGQbvLcGtZlwHXUkdnb_6p8QDj4V_CPra0MAdRM"></script> -->
-				<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=uImnlGQbvLcGtZlwHXUkdnb_6p8QDj4V_CPra0MAdRM&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff'></script>
+				<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=uImnlGQbvLcGtZlwHXUkdnb_6p8QDj4V_CPra0MAdRM&co=1e5882&cmo=5daa5f&cmn=7f313b&ct=ffffff'></script>
 			</td>
 		</tr>
 	</table>
