--- a/index.html
+++ b/index.html
@@ -179,11 +179,16 @@
 					</td>
 				</tr>
 			</table>
-			<table align=center width=700>
+			<table align=center width=800>
 				<tr>
 					<td align=center width=120px>
 						<center>
 							<span style="font-size:20px"><a href='https://arxiv.org/abs/2203.07363'>[Paper]</a></span>
+						</center>
+					</td>					
+					<td align=center width=120px>
+						<center>
+							<span style="font-size:20px"><a href='paper/[2022][CVPR]VCOD_MoCA-Mask_Chinese.pdf'>[中译版]</a></span>
 						</center>
 					</td>
 					<td align=center width=120px>
