--- a/index.html
+++ b/index.html
@@ -196,14 +196,19 @@
 							<span style="font-size:20px"><a href='https://github.com/XuelianCheng/SLT-Net'>[GitHub]</a></span><br>
 						</center>
 					</td>
+					<br>
 					<td align=center width=160px>
 						<center>
-							<span style="font-size:20px"><a href='https://drive.google.com/file/d/1FB24BGVrPOeUpmYbKZJYL5ermqUvBo_6/view?usp=sharing'>[MoCA-Mask]</a></span><br>
+							MoCA-Mask:
+							<span style="font-size:20px"><a href='https://drive.google.com/file/d/1FB24BGVrPOeUpmYbKZJYL5ermqUvBo_6/view?usp=sharing'>[Google Drive]</a></span><br>
+							<span style="font-size:20px"><a href='https://drive.google.com/file/d/1FB24BGVrPOeUpmYbKZJYL5ermqUvBo_6/view?usp=sharing'>[Baidu Drive]</a></span><br>
 						</center>
 					</td>
 					<td align=center width=250px>
 						<center>
-							<span style="font-size:20px"><a href='https://drive.google.com/file/d/1a7ESYE30q5MHsmrfTasNEOsbjdpZdgz5/view?usp=sharing'>[MoCA-Mask-Pseudo]</a></span><br>
+							MoCA-Mask-Pseudo:
+							<span style="font-size:20px"><a href='https://drive.google.com/file/d/1a7ESYE30q5MHsmrfTasNEOsbjdpZdgz5/view?usp=sharing'>[Google Drive]</a></span><br>
+							<span style="font-size:20px"><a href='https://drive.google.com/file/d/1a7ESYE30q5MHsmrfTasNEOsbjdpZdgz5/view?usp=sharing'>[Baidu Drive]</a></span><br>
 						</center>
 					</td>
 				</tr>
