--- a/index.html
+++ b/index.html
@@ -195,19 +195,22 @@
 						<center>
 							<span style="font-size:20px"><a href='https://github.com/XuelianCheng/SLT-Net'>[GitHub]</a></span><br>
 						</center>
-					</td>
-					<br>
+					</td>					
+				</tr>
+			</table>
+			<table align=center width=800>
+				<tr>				
 					<td align=center width=160px>
 						<center>
-							MoCA-Mask:
-							<span style="font-size:20px"><a href='https://drive.google.com/file/d/1FB24BGVrPOeUpmYbKZJYL5ermqUvBo_6/view?usp=sharing'>[Google Drive]</a></span><br>
+							<span style="font-size:20px"><a >MoCA-Mask:</a></span>
+							<span style="font-size:20px"><a href='https://drive.google.com/file/d/1FB24BGVrPOeUpmYbKZJYL5ermqUvBo_6/view?usp=sharing'>[Google Drive]</a></span>
 							<span style="font-size:20px"><a href='https://drive.google.com/file/d/1FB24BGVrPOeUpmYbKZJYL5ermqUvBo_6/view?usp=sharing'>[Baidu Drive]</a></span><br>
 						</center>
 					</td>
 					<td align=center width=250px>
-						<center>
-							MoCA-Mask-Pseudo:
-							<span style="font-size:20px"><a href='https://drive.google.com/file/d/1a7ESYE30q5MHsmrfTasNEOsbjdpZdgz5/view?usp=sharing'>[Google Drive]</a></span><br>
+						<center>						
+							<span style="font-size:20px">MoCA-Mask-Pseudo:</span>
+							<span style="font-size:20px"><a href='https://drive.google.com/file/d/1a7ESYE30q5MHsmrfTasNEOsbjdpZdgz5/view?usp=sharing'>[Google Drive]</a></span>
 							<span style="font-size:20px"><a href='https://drive.google.com/file/d/1a7ESYE30q5MHsmrfTasNEOsbjdpZdgz5/view?usp=sharing'>[Baidu Drive]</a></span><br>
 						</center>
 					</td>
