--- a/index.html
+++ b/index.html
@@ -200,18 +200,19 @@
 			</table>
 			<table align=center width=800>
 				<tr>				
-					<td align=center width=160px>
+					<td align=center width=250px>
 						<center>
-							<span style="font-size:20px"> MoCA-Mask:</span>
+							<span style="font-size:20px">MoCA-Mask:</span>
 							<span style="font-size:20px"><a href='https://drive.google.com/file/d/1FB24BGVrPOeUpmYbKZJYL5ermqUvBo_6/view?usp=sharing'>[Google Drive]</a></span>
-							<span style="font-size:20px"><a href='https://pan.baidu.com/s/1IT9nQT5xdX0zWvRVH5WDmQ?pwd=dfpo'>[Baidu Drive]</a></span><br>
+							<span style="font-size:20px"><a href='https://pan.baidu.com/s/1IT9nQT5xdX0zWvRVH5WDmQ?pwd=dfpo'>[Baidu]</a></span><br>
 						</center>
 					</td>
 					<td align=center width=250px>
 						<center>						
 							<span style="font-size:20px">MoCA-Mask-Pseudo:</span>
 							<span style="font-size:20px"><a href='https://drive.google.com/file/d/1a7ESYE30q5MHsmrfTasNEOsbjdpZdgz5/view?usp=sharing'>[Google Drive]</a></span>
-							<span style="font-size:20px"><a href='https://drive.google.com/file/d/1a7ESYE30q5MHsmrfTasNEOsbjdpZdgz5/view?usp=sharing'>[Baidu Drive]</a></span><br>
+							<span style="font-size:20px"><a href=''>[Baidu_train]</a></span>
+							<span style="font-size:20px"><a href=''>[Baidu_test]</a></span><br>
 						</center>
 					</td>
 				</tr>
