--- a/index.html
+++ b/index.html
@@ -207,12 +207,11 @@
 							<span style="font-size:20px"><a href='https://pan.baidu.com/s/1IT9nQT5xdX0zWvRVH5WDmQ?pwd=dfpo'>[Baidu]</a></span><br>
 						</center>
 					</td>
-					<td align=center width=250px>
+					<td align=center width=400px>
 						<center>						
 							<span style="font-size:20px">MoCA-Mask-Pseudo:</span>
 							<span style="font-size:20px"><a href='https://drive.google.com/file/d/1a7ESYE30q5MHsmrfTasNEOsbjdpZdgz5/view?usp=sharing'>[Google Drive]</a></span>
-							<span style="font-size:20px"><a href=''>[Baidu_train]</a></span>
-							<span style="font-size:20px"><a href=''>[Baidu_test]</a></span><br>
+							<span style="font-size:20px"><a href=''>[Baidu]</a></span><br>
 						</center>
 					</td>
 				</tr>
