--- a/index copy.html
+++ b/index copy.html
@@ -136,120 +136,88 @@
 </head>
 
 <body>
-	<div class="github_logo w-embed">
-		<a href="https://github.com/XuelianCheng/SLT-Net" class="github-corner" aria-label="View source on Github">
-			<svg width="80" height="80" viewBox="0 0 250 250" style="fill:#333333; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true">
-				<defs>
-					<mask id="octomask">
-					<path fill="white" d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
-					<path fill="black" d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" style="transform-origin: 130px 106px;" class="octo-arm"></path>
-					<path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="black" class="octo-body"></path></mask>
-				</defs>
-				<rect class="filler" width="100%" height="100%" mask="url(#octomask)"></rect>
-			</svg>
-		</a>
-		<style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
-	</div>
-	<div class="section hero nerf-_v2 wf-section">
-		<div class="container-2 nerf_header_v2 w-container">
-			<h1 class="nerf_title_v2">SLT-Net</h1>
-			<h1 class="nerf_subheader_v2">Implicit Motion Handling for Video Camouflaged Object Detection</h1>
-			<h1 class="eccv_label">CVPR 2022</h1>
-			<div class="nerf_authors_list_single w-row">
-				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6">
-					<a href="https://xueliancheng.github.io/" target="_blank" class="nerf_authors_v2">Xuelian Cheng<span class="text-span_nerf_star">*</span><span class="superscript text-span_nerf">1*</span></a>
-				</div>
-				<div class="column w-col w-col-2 w-col-small-4 w-col-tiny-6">
-					<a href="https://scholar.google.com/citations?user=l4hm14MAAAAJ&hl=en" target="_blank" class="nerf_authors_v2">Huan Xiong<span class="text-span_nerf_star">3</span><span class="superscript text-span_nerf"></span></a>
-				</div>
-				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6">
-					<a href="https://dengpingfan.github.io/" target="_blank" class="nerf_authors_v2">Deng-Ping Fan<span class="text-span_nerf_star">*</span><span class="superscript text-span_nerf">3</span></a>
-				</div>
-				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6">
-					<a href="https://scholar.google.com.sg/citations?user=E9NVOBUAAAAJ&hl=en" target="_blank" class="nerf_authors_v2">Yiran Zhong<span class="text-span_nerf">4</span><span class="superscript"></span></a>
-				</div>
-				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6">
-					<a href="https://sites.google.com/site/mehrtashharandi/" target="_blank" class="nerf_authors_v2">Mehrtash Harandi<span class="text-span_nerf">1</span></a>
-				</div>
-				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6">
-					<a href="http://twd20g.blogspot.com/" target="_blank" class="nerf_authors_v2">Tom Drummond<span class="text-span_nerf">5</span></a>
-				</div>
-				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6">
-					<a href="https://zongyuange.github.io/" target="_blank" class="nerf_authors_v2">Zongyuan Ge<span class="text-span_nerf">1</span></a>
-				</div>
-			</div>
-			<div class="columns-6 w-row">
-				<div class="nerf_mobile_col_inst w-col w-col-4 w-col-small-4 w-col-tiny-4">
-					<div class="nerf_mobile_inst"><span class="text-span_nerf">1 </span>Monash University</div>
-				</div>
-				<div class="nerf_mobile_col_inst w-col w-col-4 w-col-small-4 w-col-tiny-4">
-					<div class="nerf_mobile_inst"><span class="text-span_nerf">2 </span> MBZUAI </div>
-				</div>
-				<div class="nerf_mobile_col_inst w-col w-col-4 w-col-small-4 w-col-tiny-4">
-					<div class="nerf_mobile_inst"><span class="text-span_nerf">3 </span> ETH Zurich </div>
-				</div>
-				<div class="nerf_mobile_col_inst w-col w-col-4 w-col-small-4 w-col-tiny-4">
-					<div class="nerf_mobile_inst"><span class="text-span_nerf">4 </span> SenseTime </div>
-				</div>
-			</div>
-			<div class="nerf_authors_list_single nerf_authors_affiliation w-row">
-				<div class="w-col w-col-2"><h1 class="nerf_affiliation_v2"> Monash University </h1></div>
-				<div class="column w-col w-col-2"><h1 class="nerf_affiliation_v2"> MBZUAI </h1></div>
-				<div class="w-col w-col-2"><h1 class="nerf_affiliation_v2"> ETH Zurich </h1></div>
-				<div class="w-col w-col-2"><h1 class="nerf_affiliation_v2"> SenseTime </h1></div>
-				<div class="w-col w-col-2"><h1 class="nerf_affiliation_v2">Monash University</h1></div>
-				<div class="w-col w-col-2"><h1 class="nerf_affiliation_v2">Monash University</h1></div>
-				<div class="w-col w-col-2"><h1 class="nerf_affiliation_v2">Monash University</h1></div>
-			</div>
-			<div class="div-block-10">
-				<div class="nerf_equal_v2"><span class="text-span_nerf">*</span><span class="text-span_nerf_star">*</span>Denotes Equal Contribution</div>
-			</div>
-			<div class="link_column_nerf_v2 w-row">
-				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
-					<a href="https://arxiv.org/abs/2203.07363" class="link-block w-inline-block">
-						<img src="https://uploads-ssl.webflow.com/51e0d73d83d06baa7a00000f/5cab99df4998decfbf9e218e_paper-01.png" alt="paper" sizes="(max-width: 479px) 12vw, (max-width: 767px) 7vw, (max-width: 991px) 41.8515625px, 56.6953125px" srcset="https://uploads-ssl.webflow.com/51e0d73d83d06baa7a00000f/5cab99df4998decfbf9e218e_paper-01-p-500.png 500w, https://uploads-ssl.webflow.com/51e0d73d83d06baa7a00000f/5cab99df4998decfbf9e218e_paper-01.png 672w" class="paper_img image-8_nerf">
-					</a>
-				</div>	
-				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
-					<a href="paper/[2022][CVPR]VCOD_MoCA-Mask_Chinese.pdf" class="link-block w-inline-block">
-						<img src="https://uploads-ssl.webflow.com/51e0d73d83d06baa7a00000f/5cab99df4998decfbf9e218e_paper-01.png" alt="中译版" sizes="(max-width: 479px) 12vw, (max-width: 767px) 7vw, (max-width: 991px) 41.8515625px, 56.6953125px" srcset="https://uploads-ssl.webflow.com/51e0d73d83d06baa7a00000f/5cab99df4998decfbf9e218e_paper-01-p-500.png 500w, https://uploads-ssl.webflow.com/51e0d73d83d06baa7a00000f/5cab99df4998decfbf9e218e_paper-01.png 672w" class="paper_img image-8_nerf">
-					</a>
-				</div>
-				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
-					<a href="https://github.com/XuelianCheng/SLT-Net" target="_blank" class="link-block w-inline-block"><img src="https://uploads-ssl.webflow.com/51e0d73d83d06baa7a00000f/5cae3b53b42ebb3dd4175a82_68747470733a2f2f7777772e69636f6e66696e6465722e636f6d2f646174612f69636f6e732f6f637469636f6e732f313032342f6d61726b2d6769746875622d3235362e706e67.png" alt="code" class="paper_img image-8 github_icon_nerf_v2"></a>
-				</div>
-				<div class="column-2 w-col w-col-4 w-col-small-4 w-col-tiny-4">
-					<a href="https://drive.google.com/drive/folders/1DEe552YXlcX0qO00MRl21okZupMVsbaZ?usp=sharing" target="_blank" class="link-block w-inline-block"><img src="https://uploads-ssl.webflow.com/51e0d73d83d06baa7a00000f/5e7136849ee3b0a0c6a95151_database.svg" alt="dataset[Google Drive]" class="paper_img image-8_nerf nerf_db_icon"></a>
-				</div>
-				<div class="column-2 w-col w-col-4 w-col-small-4 w-col-tiny-4">
-					<a href="https://drive.google.com/drive/folders/1DEe552YXlcX0qO00MRl21okZupMVsbaZ?usp=sharing" target="_blank" class="link-block w-inline-block"><img src="https://uploads-ssl.webflow.com/51e0d73d83d06baa7a00000f/5e7136849ee3b0a0c6a95151_database.svg" alt="dataset[Baidu Drive]" class="paper_img image-8_nerf nerf_db_icon"></a>
-				</div>
-			</div>
-			<div class="paper_code_nerf w-row">
-				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
-					<div class="text-block-2"><strong class="bold-text-nerf_v2">Paper</strong>
-					</div>
-				</div>
-				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
-					<div class="text-block-2"><strong class="bold-text-nerf_v2">中译版</strong>
-					</div>
-				</div>
-				
-				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
-					<div class="text-block-2"><strong class="bold-text-nerf_v2">&lt;/Code&gt;</strong>
-					</div>
-				</div>
-				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
-					<div class="text-block-2"><strong class="bold-text-nerf_v2">Data[Google Drive]</strong>
-					</div>
-				</div>
-				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
-					<div class="text-block-2"><strong class="bold-text-nerf_v2">Data[Baidu Drive]</strong>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+	<br>
+	<center>
+		<span style="font-size:36px">Implicit Motion Handling for Video Camouflaged Object Detection</span>
+		<table align=center width=1000px>
+			<table align=center width=1000px>
+				<tr>
+					<td align=center width=120px>
+						<center>
+							<span style="font-size:18px"><a href="https://scholar.google.com/citations?user=gQ5kHH8AAAAJ&hl=en">Xuelian Cheng</a></span>
+						</center>
+					</td>
+					<td align=center width=100px>
+						<center>
+							<span style="font-size:18px"><a href="https://scholar.google.com/citations?user=l4hm14MAAAAJ&hl=en">Huan Xiong</a></span>
+						</center>
+					</td>
+					<td align=center width=120px>
+						<center>
+							<span style="font-size:18px"><a href="https://dengpingfan.github.io/">Deng-Ping Fan</a></span>
+						</center>
+					</td>
+					<td align=center width=100px>
+						<center>
+							<span style="font-size:18px"><a href="https://scholar.google.com.sg/citations?user=E9NVOBUAAAAJ&hl=en">Yiran Zhong</a></span>
+						</center>
+					</td>
+					<td align=center width=120px>
+						<center>
+							<span style="font-size:18px"><a href="https://sites.google.com/site/mehrtashharandi/">Mehrtash Harandi</a></span>
+						</center>
+					</td>
+					<td align=center width=120px>
+						<center>
+							<span style="font-size:18px"><a href="http://twd20g.blogspot.com/">Tom Drummond</a></span>
+						</center>
+					</td>
+					<td align=center width=100px>
+						<center>
+							<span style="font-size:18px"><a href="https://zongyuange.github.io/">Zongyuan Ge</a></span>
+						</center>
+					</td>
+				</tr>
+			</table>
+			<table align=center width=800>
+				<tr>
+					<td align=center width=120px>
+						<center>
+							<span style="font-size:20px"><a href='https://arxiv.org/abs/2203.07363'>[Paper]</a></span>
+						</center>
+					</td>					
+					<td align=center width=120px>
+						<center>
+							<span style="font-size:20px"><a href='paper/[2022][CVPR]VCOD_MoCA-Mask_Chinese.pdf'>[中译版]</a></span>
+						</center>
+					</td>
+					<td align=center width=120px>
+						<center>
+							<span style="font-size:20px"><a href='https://github.com/XuelianCheng/SLT-Net'>[GitHub]</a></span><br>
+						</center>
+					</td>					
+				</tr>
+			</table>
+			<table align=center width=800>
+				<tr>				
+					<td align=center width=250px>
+						<center>
+							<span style="font-size:20px">MoCA-Mask:</span>
+							<span style="font-size:20px"><a href='https://drive.google.com/file/d/1FB24BGVrPOeUpmYbKZJYL5ermqUvBo_6/view?usp=sharing'>[Google Drive]</a></span>
+							<span style="font-size:20px"><a href='https://pan.baidu.com/s/1IT9nQT5xdX0zWvRVH5WDmQ?pwd=dfpo'>[Baidu]</a></span><br>
+						</center>
+					</td>
+					<td align=center width=300px>
+						<center>						
+							<span style="font-size:20px">MoCA-Mask-Pseudo:</span>
+							<span style="font-size:20px"><a href='https://drive.google.com/file/d/1a7ESYE30q5MHsmrfTasNEOsbjdpZdgz5/view?usp=sharing'>[Google Drive]</a></span>
+							<span style="font-size:20px"><a href='https://pan.baidu.com/s/1sBOc9k8KOOG1gHpFms4Aig?pwd=6llz'>[Baidu]</a></span><br>
+						</center>
+					</td>
+				</tr>
+			</table>
+		</table>
+	</center>
 
 	<hr>
 
