--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		gtag('config', 'UA-75863369-6');
 		</script>
     </head>
-	
+
 	<body>
 		<div class="github_logo w-embed">
 			<a href="https://github.com/XuelianCheng/SLT-Net" class="github-corner" aria-label="View source on Github">
@@ -31,19 +31,19 @@
 		</div>
 
 		<div class="section hero nerf-_v2 wf-section">
-		<div class="container-2 nerf_header_v2 w-container">
-			<h1 class="nerf_title_v2">SLT-Net</h1>
-			<h1 class="nerf_subheader_v2">Implicit Motion Handling for Video Camouflaged Object Detection</h1>
-			<h1 class="eccv_label">CVPR 2022</h1>
-			<div class="nerf_authors_list_single w-row">
-				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6">
-					<a href="https://xueliancheng.github.io/" target="_blank" class="nerf_authors_v2">Xuelian Cheng<span class="text-span_nerf_star">*</span><span class="superscript text-span_nerf">1*</span></a>
+			<div class="container-2 nerf_header_v2 w-container">
+				<h1 class="nerf_title_v2">SLT-Net</h1>
+				<h1 class="nerf_subheader_v2">Implicit Motion Handling for Video Camouflaged Object Detection</h1>
+				<h1 class="eccv_label">CVPR 2022</h1>
+				<div class="nerf_authors_list_single w-row">
+					<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6">
+						<a href="https://xueliancheng.github.io/" target="_blank" class="nerf_authors_v2">Xuelian Cheng<span class="text-span_nerf_star">*</span><span class="superscript text-span_nerf">1</span></a>
 				</div>
 				<div class="column w-col w-col-2 w-col-small-4 w-col-tiny-6">
-					<a href="https://scholar.google.com/citations?user=l4hm14MAAAAJ&hl=en" target="_blank" class="nerf_authors_v2">Huan Xiong<span class="text-span_nerf_star">3</span><span class="superscript text-span_nerf"></span></a>
+					<a href="https://scholar.google.com/citations?user=l4hm14MAAAAJ&hl=en" target="_blank" class="nerf_authors_v2">Huan Xiong<span class="text-span_nerf_star">*</span><span class="superscript text-span_nerf">2</span></a>
 				</div>
 				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6">
-					<a href="https://dengpingfan.github.io/" target="_blank" class="nerf_authors_v2">Deng-Ping Fan<span class="text-span_nerf_star">*</span><span class="superscript text-span_nerf">3</span></a>
+					<a href="https://dengpingfan.github.io/" target="_blank" class="nerf_authors_v2">Deng-Ping Fan<span class="text-span_nerf_star"></span><span class="superscript text-span_nerf">3</span></a>
 				</div>
 				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6">
 					<a href="https://scholar.google.com.sg/citations?user=E9NVOBUAAAAJ&hl=en" target="_blank" class="nerf_authors_v2">Yiran Zhong<span class="text-span_nerf">4</span><span class="superscript"></span></a>
