--- a/index.html
+++ b/index.html
@@ -3,16 +3,27 @@
         <style>.wf-force-outline-none[tabindex="-1"]:focus{outline:none;}</style>
         <meta charset="utf-8"><title>SLT-Net: Implicit Motion Handling for Video Camouflaged Object Detection</title>
         <meta content="SLT-Net: Implicit Motion Handling for Video Camouflaged Object Detection" property="og:title">
-        <!-- Get from Google Analytics -->
+        <meta content=" " property="og:description">
+        <meta content=" " property="og:image">
+        <meta content="SLT-Net" property="twitter:title">
+        <meta content=" " property="twitter:description">
+        <meta content=" " property="twitter:image">
+        <meta property="og:type" content="website">
+        <meta content="summary_large_image" name="twitter:card">
+        <meta content="width=device-width, initial-scale=1" name="viewport">
+        <link href="https://uploads-ssl.webflow.com/51e0d73d83d06baa7a00000f/css/matthewtancik.webflow.61cd4525b.min.css" rel="stylesheet" type="text/css">
+        <!-- <script src="https://ssl.google-analytics.com/ga.js"></script> -->
+		<!-- Get from Google Analytics -->
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src=""></script> 
-		<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
-
-		gtag('config', 'UA-75863369-6');
-		</script>
+        <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic%7CMontserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic%7CUbuntu:300,300italic,400,400italic,500,500italic,700,700italic%7COpen+Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic%7CChanga+One:400,400italic%7CVarela+Round:400%7CBungee+Shade:regular%7CRoboto:300,regular,500%7CBungee+Outline:regular" media="all">
+        <script type="text/javascript">WebFont.load({  google: {    families: ["Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic","Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","Ubuntu:300,300italic,400,400italic,500,500italic,700,700italic","Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic","Changa One:400,400italic","Varela Round:400","Bungee Shade:regular","Roboto:300,regular,500","Bungee Outline:regular"]  }});</script><!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
+        <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
+        <link href="https://uploads-ssl.webflow.com/51e0d73d83d06baa7a00000f/5aaddbdee8d43ceeae2f2e4c_favicon-32x32.png" rel="shortcut icon" type="image/x-icon">
+        <link href="https://y7v4p6k4.ssl.hwcdn.net/51db7fcf29a6f36b2a000001/51e06d302f5394c87600002a_webclip-comet.png" rel="apple-touch-icon">
+        <script type="text/javascript">var _gaq = _gaq || [];_gaq.push(['_setAccount', 'UA-46779055-1'], ['_trackPageview']);(function() {  var ga = document.createElement('script');  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);})();</script>
+        <style> .wf-loading * {opacity: 0;}</style>
     </head>
 
 	<body>
