--- a/index.html
+++ b/index.html
@@ -47,25 +47,25 @@
 				<h1 class="nerf_subheader_v2">Implicit Motion Handling for Video Camouflaged Object Detection</h1>
 				<h1 class="eccv_label">CVPR 2022</h1>
 				<div class="nerf_authors_list_single w-row">
-					<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6">
-						<a href="https://xueliancheng.github.io/" target="_blank" class="nerf_authors_v2">Xuelian Cheng<span class="text-span_nerf_star">*</span><span class="superscript text-span_nerf">1</span></a>
+					<div class="w-col w-col-2 w-col-small-4 w-col-tiny-7">
+						<a href="https://xueliancheng.github.io/" target="_blank" class="nerf_authors_v2">Xuelian Cheng<span class="text-span_nerf_star">*</span><span class="superscript text-span_nerf">1*</span></a>
 				</div>
-				<div class="column w-col w-col-2 w-col-small-4 w-col-tiny-6">
-					<a href="https://scholar.google.com/citations?user=l4hm14MAAAAJ&hl=en" target="_blank" class="nerf_authors_v2">Huan Xiong<span class="text-span_nerf_star">*</span><span class="superscript text-span_nerf">2</span></a>
+				<div class="column w-col w-col-2 w-col-small-4 w-col-tiny-7">
+					<a href="https://scholar.google.com/citations?user=l4hm14MAAAAJ&hl=en" target="_blank" class="nerf_authors_v2">Huan Xiong<span class="text-span_nerf_star">*</span><span class="superscript text-span_nerf">2*</span></a>
 				</div>
-				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6">
+				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-7">
 					<a href="https://dengpingfan.github.io/" target="_blank" class="nerf_authors_v2">Deng-Ping Fan<span class="text-span_nerf_star"></span><span class="superscript text-span_nerf">3</span></a>
 				</div>
-				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6">
+				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-7">
 					<a href="https://scholar.google.com.sg/citations?user=E9NVOBUAAAAJ&hl=en" target="_blank" class="nerf_authors_v2">Yiran Zhong<span class="text-span_nerf">4</span><span class="superscript"></span></a>
 				</div>
-				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6">
+				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-7">
 					<a href="https://sites.google.com/site/mehrtashharandi/" target="_blank" class="nerf_authors_v2">Mehrtash Harandi<span class="text-span_nerf">1</span></a>
 				</div>
-				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6">
-					<a href="http://twd20g.blogspot.com/" target="_blank" class="nerf_authors_v2">Tom Drummond<span class="text-span_nerf">5</span></a>
+				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-7">
+					<a href="http://twd20g.blogspot.com/" target="_blank" class="nerf_authors_v2">Tom Drummond<span class="text-span_nerf">1</span></a>
 				</div>
-				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6">
+				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-7">
 					<a href="https://zongyuange.github.io/" target="_blank" class="nerf_authors_v2">Zongyuan Ge<span class="text-span_nerf">1</span></a>
 				</div>
 			</div>
@@ -117,28 +117,37 @@
 				</div>
 			</div>
 			<div class="paper_code_nerf w-row">
-				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
+				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-6">
 					<div class="text-block-2"><strong class="bold-text-nerf_v2">Paper</strong>
 					</div>
 				</div>
-				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
+				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-6">
 					<div class="text-block-2"><strong class="bold-text-nerf_v2">中译版</strong>
 					</div>
 				</div>
 				
-				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
+				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-6">
 					<div class="text-block-2"><strong class="bold-text-nerf_v2">&lt;/Code&gt;</strong>
 					</div>
 				</div>
-				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
+				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-6">
 					<div class="text-block-2"><strong class="bold-text-nerf_v2">Data[Google Drive]</strong>
 					</div>
 				</div>
-				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
+				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-6">
 					<div class="text-block-2"><strong class="bold-text-nerf_v2">Data[Baidu Drive]</strong>
 					</div>
 				</div>
 			</div>
 		</div>
+
+		<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+			<tr>
+			  <td style="padding:0px">
+				<br><p style="text-align:right;">Website template from <a href="https://www.matthewtancik.com/nerf">NeRF</a><br></p>
+			  </td>
+			</tr>
+		  </tbody>
+		</table>
 	</body>
 </html>
