--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
 		</div>
 
 		<div class="section hero nerf-_v2 wf-section">
-			<div class="container-2 nerf_header_v2 w-container">
-				<h1 class="nerf_title_v2">SLT-Net</h1>
-				<h1 class="nerf_subheader_v2">Implicit Motion Handling for Video Camouflaged Object Detection</h1>
-				<h1 class="eccv_label">CVPR 2022</h1>
-				<div class="nerf_authors_list_single w-row">
+			<div class="container-2 header_v2 w-container">
+				<h1 class="title_v2">SLT-Net</h1>
+				<h1 class="subheader_v2">Implicit Motion Handling for Video Camouflaged Object Detection</h1>
+				<h1 class="CVPR_label">CVPR 2022</h1>
+				<div class="authors_list_single w-row">
 					<div class="w-col w-col-2 w-col-small-4 w-col-tiny-7">
-						<a href="https://xueliancheng.github.io/" target="_blank" class="nerf_authors_v2">Xuelian Cheng<span class="text-span_nerf_star">*</span><span class="superscript text-span_nerf">1*</span></a>
-				</div>
+						<a href="https://xueliancheng.github.io/" target="_blank" class="authors_v2">Xuelian Cheng<span class="text-span_star">*</span><span class="superscript text-span">1*</span></a>
+					</div>
 				<div class="column w-col w-col-2 w-col-small-4 w-col-tiny-7">
-					<a href="https://scholar.google.com/citations?user=l4hm14MAAAAJ&hl=en" target="_blank" class="nerf_authors_v2">Huan Xiong<span class="text-span_nerf_star">*</span><span class="superscript text-span_nerf">2*</span></a>
+					<a href="https://scholar.google.com/citations?user=l4hm14MAAAAJ&hl=en" target="_blank" class="authors_v2">Huan Xiong<span class="text-span">*</span><span class="superscript text-span">2*</span></a>
 				</div>
 				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-7">
 					<a href="https://dengpingfan.github.io/" target="_blank" class="nerf_authors_v2">Deng-Ping Fan<span class="text-span_nerf_star"></span><span class="superscript text-span_nerf">3</span></a>
@@ -69,7 +69,7 @@
 					<a href="https://zongyuange.github.io/" target="_blank" class="nerf_authors_v2">Zongyuan Ge<span class="text-span_nerf">1</span></a>
 				</div>
 			</div>
-			<div class="columns-6 w-row">
+			<div class="columns-7 w-row">
 				<div class="nerf_mobile_col_inst w-col w-col-4 w-col-small-4 w-col-tiny-4">
 					<div class="nerf_mobile_inst"><span class="text-span_nerf">1 </span>Monash University</div>
 				</div>
@@ -95,7 +95,7 @@
 			<div class="div-block-10">
 				<div class="nerf_equal_v2"><span class="text-span_nerf">*</span><span class="text-span_nerf_star">*</span>Denotes Equal Contribution</div>
 			</div>
-			<div class="link_column_nerf_v2 w-row">
+			<div class="link_column_nerf_v2 w-row-1">
 				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-6">
 					<a href="https://openaccess.thecvf.com/content/CVPR2022/papers/Cheng_Implicit_Motion_Handling_for_Video_Camouflaged_Object_Detection_CVPR_2022_paper.pdf" class="link-block w-inline-block">
 						<img src="https://uploads-ssl.webflow.com/51e0d73d83d06baa7a00000f/5cab99df4998decfbf9e218e_paper-01.png" alt="paper" sizes="(max-width: 479px) 12vw, (max-width: 767px) 7vw, (max-width: 991px) 41.8515625px, 56.6953125px" srcset="https://uploads-ssl.webflow.com/51e0d73d83d06baa7a00000f/5cab99df4998decfbf9e218e_paper-01-p-500.png 500w, https://uploads-ssl.webflow.com/51e0d73d83d06baa7a00000f/5cab99df4998decfbf9e218e_paper-01.png 672w" class="paper_img image-8_nerf">
@@ -109,14 +109,8 @@
 				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-6">
 					<a href="https://github.com/XuelianCheng/SLT-Net" target="_blank" class="link-block w-inline-block"><img src="https://uploads-ssl.webflow.com/51e0d73d83d06baa7a00000f/5cae3b53b42ebb3dd4175a82_68747470733a2f2f7777772e69636f6e66696e6465722e636f6d2f646174612f69636f6e732f6f637469636f6e732f313032342f6d61726b2d6769746875622d3235362e706e67.png" alt="code" class="paper_img image-8 github_icon_nerf_v2"></a>
 				</div>
-				<div class="column-2 w-col w-col-4 w-col-small-4 w-col-tiny-6">
-					<a href="https://drive.google.com/drive/folders/1DEe552YXlcX0qO00MRl21okZupMVsbaZ?usp=sharing" target="_blank" class="link-block w-inline-block"><img src="https://uploads-ssl.webflow.com/51e0d73d83d06baa7a00000f/5e7136849ee3b0a0c6a95151_database.svg" alt="dataset[Google Drive]" class="paper_img image-8_nerf nerf_db_icon"></a>
-				</div>
-				<div class="column-2 w-col w-col-4 w-col-small-4 w-col-tiny-6">
-					<a href="https://pan.baidu.com/s/19HkEqqdS_N2jm_vU4NVD5g?pwd=bubw" target="_blank" class="link-block w-inline-block"><img src="https://uploads-ssl.webflow.com/51e0d73d83d06baa7a00000f/5e7136849ee3b0a0c6a95151_database.svg" alt="dataset[Baidu Drive]" class="paper_img image-8_nerf nerf_db_icon"></a>
-				</div>
 			</div>
-			<div class="paper_code_nerf w-row">
+			<div class="paper_code_nerf w-row-1">
 				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-6">
 					<div class="text-block-2"><strong class="bold-text-nerf_v2">Paper</strong>
 					</div>
@@ -130,20 +124,30 @@
 					<div class="text-block-2"><strong class="bold-text-nerf_v2">&lt;/Code&gt;</strong>
 					</div>
 				</div>
+			</div>
+			
+			<div class="link_column_nerf_v2 w-row-2">
+				<div class="column-2 w-col w-col-4 w-col-small-4 w-col-tiny-6">
+					<a href="https://drive.google.com/drive/folders/1DEe552YXlcX0qO00MRl21okZupMVsbaZ?usp=sharing" target="_blank" class="link-block w-inline-block"><img src="https://uploads-ssl.webflow.com/51e0d73d83d06baa7a00000f/5e7136849ee3b0a0c6a95151_database.svg" alt="dataset[Google Drive]" class="paper_img image-8_nerf nerf_db_icon"></a>
+				</div>
+				<div class="column-2 w-col w-col-4 w-col-small-4 w-col-tiny-6">
+					<a href="https://pan.baidu.com/s/19HkEqqdS_N2jm_vU4NVD5g?pwd=bubw" target="_blank" class="link-block w-inline-block"><img src="https://uploads-ssl.webflow.com/51e0d73d83d06baa7a00000f/5e7136849ee3b0a0c6a95151_database.svg" alt="dataset[Baidu Drive]" class="paper_img image-8_nerf nerf_db_icon"></a>
+				</div>
+			</div>
+			<div class="paper_code_nerf w-row-2">
 				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-6">
-					<div class="text-block-2"><strong class="bold-text-nerf_v2">Data[Google Drive]</strong>
-					</div>
+					<div class="text-block-2"><strong class="bold-text-nerf_v2">Data[Google Drive]</strong></div>
 				</div>
 				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-6">
-					<div class="text-block-2"><strong class="bold-text-nerf_v2">Data[Baidu Drive]</strong>
-					</div>
+					<div class="text-block-2"><strong class="bold-text-nerf_v2">Data[Baidu Drive]</strong></div>
 				</div>
 			</div>
 		</div>
+			
 
 		<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 			<tr>
-			  <td style="padding:10px">
+			  <td style="padding:100px">
 				<br><p style="text-align:right;">Website template from <a href="https://www.matthewtancik.com/nerf">NeRF</a><br></p>
 			  </td>
 			</tr>
