--- a/index.html
+++ b/index.html
@@ -121,18 +121,8 @@
 						href="https://scholar.google.com.sg/citations?user=E9NVOBUAAAAJ&hl=en" target="_blank"
 						class="nerf_authors_v2">Yiran Zhong<span class="text-span_nerf">4</span><span
 							class="superscript"></span></a></div>
-				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6"><a
-						href="https://sites.google.com/site/mehrtashharandi/" target="_blank"
-						class="nerf_authors_v2">Mehrtash Harandi<span class="text-span_nerf">1</span></a></div>
-				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6"><a href="http://twd20g.blogspot.com/"
-						target="_blank" class="nerf_authors_v2">Tom Drummond<span class="text-span_nerf">1</span></a>
-				</div>
 			</div>
 
-			<!-- <div class="w-col w-col-2 w-col-small-4 w-col-tiny-6">
-					<a href="https://zongyuange.github.io/" target="_blank" class="nerf_authors_v2">Zongyuan Ge<span
-							class="text-span_nerf">1</span></a>
-				</div> -->
 		</div>
 		<div class="columns-6 w-row">
 			<div class="nerf_mobile_col_inst w-col w-col-4 w-col-small-4 w-col-tiny-4">
@@ -148,6 +138,7 @@
 				<div class="nerf_mobile_inst"><span class="text-span_nerf">4 </span> SenseTime </div>
 			</div>
 		</div>
+
 		<div class="nerf_authors_list_single nerf_authors_affiliation w-row">
 			<div class="w-col w-col-2">
 				<h1 class="nerf_affiliation_v2"> Monash University </h1>
@@ -161,6 +152,21 @@
 			<div class="w-col w-col-2">
 				<h1 class="nerf_affiliation_v2"> SenseTime </h1>
 			</div>
+		</div>
+
+		<div class="nerf_authors_list_single w-row">
+			<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6"><a
+					href="https://sites.google.com/site/mehrtashharandi/" target="_blank"
+					class="nerf_authors_v2">Mehrtash Harandi<span class="text-span_nerf">1</span></a></div>
+			<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6"><a href="http://twd20g.blogspot.com/" target="_blank"
+					class="nerf_authors_v2">Tom Drummond<span class="text-span_nerf">1</span></a>
+			</div>
+			<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6">
+				<a href="https://zongyuange.github.io/" target="_blank" class="nerf_authors_v2">Zongyuan Ge<span
+						class="text-span_nerf">1</span></a>
+			</div>
+		</div>
+		<div class="nerf_authors_list_single nerf_authors_affiliation w-row">
 			<div class="w-col w-col-2">
 				<h1 class="nerf_affiliation_v2">Monash University</h1>
 			</div>
