--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 			</div>
 		</div>
 
-		<div class="nerf_authors_list_single nerf_authors_affiliation w-row">
+		<!-- <div class="nerf_authors_list_single nerf_authors_affiliation w-row">
 			<div class="w-col w-col-2">
 				<h1 class="nerf_affiliation_v2"> Monash University </h1>
 			</div>
@@ -152,7 +152,7 @@
 			<div class="w-col w-col-2">
 				<h1 class="nerf_affiliation_v2"> SenseTime </h1>
 			</div>
-		</div>
+		</div> -->
 
 		<div class="nerf_authors_list_single w-row">
 			<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6"><a
