--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 			</div>
 
 		</div>
-		<!-- <div class="columns-6 w-row">
+		<div class="columns-6 w-row">
 			<div class="nerf_mobile_col_inst w-col w-col-4 w-col-small-4 w-col-tiny-4">
 				<div class="nerf_mobile_inst"><span class="text-span_nerf">1 </span>Monash University</div>
 			</div>
@@ -137,7 +137,7 @@
 			<div class="nerf_mobile_col_inst w-col w-col-4 w-col-small-4 w-col-tiny-4">
 				<div class="nerf_mobile_inst"><span class="text-span_nerf">4 </span> SenseTime </div>
 			</div>
-		</div> -->
+		</div>
 
 		<div class="nerf_authors_list_single nerf_authors_affiliation w-row">
 			<div class="w-col w-col-2">
