--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
 			<h1 class="nerf_subheader_v2">Implicit Motion Handling for Video Camouflaged Object Detection</h1>
 			<h1 class="eccv_label">CVPR 2022</h1>
 			<div class="nerf_authors_list_single w-row">
+				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6"><a href="/"
+						target="_blank" class="nerf_authors_v2"> </a>
+				</div>
+
 				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6"><a href="https://xueliancheng.github.io/"
 						target="_blank" class="nerf_authors_v2">Xuelian Cheng<span
 							class="text-span_nerf_star">*</span><span class="superscript text-span_nerf">1*</span></a>
