--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 					<h1 class="nerf_affiliation_v2">Monash University</h1>
 				</div>
 				<div class="w-col w-col-2">
-					<h1 class="nerf_affiliation_v2">Monash University</h1>
+					<h1 class="nerf_affiliation_v2">The University of Melbourne</h1>
 				</div>
 				<div class="w-col w-col-2">
 					<h1 class="nerf_affiliation_v2">Monash University</h1>
